Fix sticky issues on iOS

--- a/src/app/core/components/main-header/main-header.component.scss
+++ b/src/app/core/components/main-header/main-header.component.scss
@@ -4,6 +4,10 @@
   height: 50px;
   width: 100%;
   background-color: #ffffff;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
   position: sticky;
   top: 0;
   z-index: 500;
